apps/ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.192.168.56.240.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: argocd-server
                port:
                  number: 443
  tls:
  - hosts: [argocd.192.168.56.240.nip.io]
    secretName: argocd-tls
