apps/ingress/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: board-api
  namespace: board
  annotations: 
    nginx.ingress.kuburnetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service:
                name: user-service
                port: 
                  number: 5001
          - path: /api/posts/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: post-service
                port:
                  number: 5002
          - path: /api/files/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: file-service
                port:
                  number: 5003
