apps/ingress/ingress-minio.yaml
# ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio-tenant
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: "console.board.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tenant1-console
            port:
              number: 9443
