apps/ingress/minio-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api-ingress
  namespace: minio-tenant
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - host: minio.board.local
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: minio
                port: 
                  number: 443
  tls:
    - hosts: ["minio.board.local"]
      secretName: minio-api-tls
