apps/ingress/minio-console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
  namespace: minio-tenant
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: minio.drsol.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tenant1-console
            port:
              number: 9443
  tls:
  - hosts: [minio.drsol.cloud]
    secretName: minio-console-tls
